In machine_learning_template.ipynb, in Modeling section, restructure entire section into two level 1 headers, one for Modeling (Regression Task) and second for Modeling (Classification Task)

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1373,18 +1373,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f779f4-707e-4898-a6c6-804e18c325c9",
-   "metadata": {},
-   "source": [
-    "# Modeling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
-    "## Regression Task  \n",
+    "# Modeling (Regression Task)  \n",
     "For a regression problem, where the goal is to predict a numerical target variable."
    ]
   },
@@ -1393,7 +1385,7 @@
    "id": "bc4a506f-0b4a-4aad-bfac-3e68f65f3dea",
    "metadata": {},
    "source": [
-    "### Helper Function for Residual Plots  \n",
+    "## Helper Function for Residual Plots  \n",
     "Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically."
    ]
   },
@@ -1444,7 +1436,7 @@
    "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
    "metadata": {},
    "source": [
-    "### Training Baseline Models (Individually)  "
+    "## Training Baseline Models (Individually)  "
    ]
   },
   {
@@ -1452,7 +1444,7 @@
    "id": "cb12588e-68c3-4fe3-b858-8ab0fb7b800f",
    "metadata": {},
    "source": [
-    "#### Linear Regression  \n",
+    "### Linear Regression  \n",
     "Hyperparameters and default values:\n",
     "- `fit_intercept=True`: Calculates the intercept; can be set to `False` if data is already centered.\n",
     "- `n_jobs=None`: Number of CPU threads; use `-1` for all available processors.\n",
@@ -1502,7 +1494,7 @@
    "id": "4da407ee-333e-4bbf-9d83-6696852c8c35",
    "metadata": {},
    "source": [
-    "#### Support Vector Regressor  \n",
+    "### Support Vector Regressor  \n",
     "Hyperparameters and default values:\n",
     "\n",
     "- Model Complexity:\n",
@@ -1564,7 +1556,7 @@
    "id": "5770a103-1db7-4744-b484-44e63c1bf6b3",
    "metadata": {},
    "source": [
-    "#### Random Forest Regressor  \n",
+    "### Random Forest Regressor  \n",
     "Hyperparameters and default values:\n",
     "- Model Complexity:\n",
     "  - `n_estimators=100`: Number of trees in the forest.  \n",
@@ -1628,7 +1620,7 @@
    "id": "7dc56c45-c57b-407a-8343-e5217b7d21cf",
    "metadata": {},
    "source": [
-    "#### Multi-Layer Perceptron Regressor  \n",
+    "### Multi-Layer Perceptron Regressor  \n",
     "Hyperparameters and default values:  \n",
     "- Model Architecture:\n",
     "    - `hidden_layer_sizes=(100,)`: Defines the size and number of hidden layers; `(100,)` indicates one layer with 100 neurons.  \n",
@@ -1698,7 +1690,7 @@
    "id": "2e9d9b1d-e7c0-45fb-a908-008c8c706590",
    "metadata": {},
    "source": [
-    "#### XGBoost Regressor  \n",
+    "### XGBoost Regressor  \n",
     "Hyperparameters and default values:  \n",
     "- Model Complexity:  \n",
     "    - `n_estimators=100`: Number of trees.  \n",
@@ -1771,7 +1763,7 @@
    "id": "36172487-5eb6-495b-910e-aafdf0365a13",
    "metadata": {},
    "source": [
-    "### Training Baseline Models (Pipeline)  \n",
+    "## Training Baseline Models (Pipeline)  \n",
     "Train five baseline models:\n",
     "- Linear Regression\n",
     "- Support Vector Regressor\n",
@@ -1851,7 +1843,7 @@
    "id": "9c4bd7a1-73cd-4c7c-bea6-f0de3b7833d8",
    "metadata": {},
    "source": [
-    "### Hyperparameter Tuning  \n",
+    "## Hyperparameter Tuning  \n",
     "Based on baseline model training, the following models outperformed the other candidates across evaluation metrics (RMSE, MAPE, R-squared) on the validation data and were selected for hyperparameter tuning:\n",
     "- Model 1 (e.g., Random Forest Regressor)\n",
     "- Model 2 (e.g., XGBoost Regressor)"
@@ -1862,7 +1854,7 @@
    "id": "8360ea07-5564-47d0-81a7-8203928a18f4",
    "metadata": {},
    "source": [
-    "#### Random Forest Regressor  \n",
+    "### Random Forest Regressor  \n",
     "Hyperparameters and default values:\n",
     "- Model Complexity:\n",
     "  - `n_estimators=100`: Number of trees in the forest.  \n",
@@ -1955,7 +1947,7 @@
    "id": "52b61928-a213-4474-a934-17684a2d041e",
    "metadata": {},
    "source": [
-    "#### XGBoost Regressor  \n",
+    "### XGBoost Regressor  \n",
     "Hyperparameters and default values:  \n",
     "- Model Complexity:  \n",
     "    - `n_estimators=100`: Number of trees.  \n",
@@ -2063,7 +2055,7 @@
    "id": "bef98c90-8aca-4cea-abae-91730047696c",
    "metadata": {},
    "source": [
-    "### Final Model  \n",
+    "## Final Model  \n",
     "Based on hyperparameter tuning, the following model achieved the best performance (e.g., RMSE = 12.34) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on the test data to confirm its generalizability.\n",
     "\n",
     "Example final model: XGBoost Regressor  \n",
@@ -2083,7 +2075,7 @@
    "id": "fbb70149-6fda-49df-a20b-10130e193888",
    "metadata": {},
    "source": [
-    "#### Training Final Model"
+    "### Training Final Model"
    ]
   },
   {
@@ -2114,7 +2106,7 @@
    "id": "d5419d06-3048-4ae6-a9a0-f92eea024c99",
    "metadata": {},
    "source": [
-    "#### Model Evaluation"
+    "### Model Evaluation"
    ]
   },
   {
@@ -2179,7 +2171,7 @@
    "id": "652cd43e-206f-464e-a2f8-06f3c641a06f",
    "metadata": {},
    "source": [
-    "#### Feature Importance "
+    "### Feature Importance "
    ]
   },
   {
@@ -2228,7 +2220,7 @@
    "id": "661472f1-6c53-4270-a381-f96641708735",
    "metadata": {},
    "source": [
-    "#### Saving Model  \n",
+    "### Saving Model  \n",
     "Save both the column transformer and the final model as pickle files in the `models` directory for later use."
    ]
   },
@@ -2264,7 +2256,7 @@
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
-    "## Classification Task  \n",
+    "# Modeling (Classification Task)  \n",
     "For a classification problem, where the goal is to predict a categorical target variable."
    ]
   },
