In machine_learning_template.ipynb, in Summary section, fix typo in EDA and add more models in modeling

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2286,10 +2286,10 @@
     "- Analyzed descriptive statistics (mean, median, standard deviation, etc.) of numerical columns and visualized distributions using histograms.\n",
     "- Examined category frequencies of categorical columns and visualized them using bar plots and a bar plot matrix.\n",
     "- Assessed bivariate relationships between numerical columns using a correlation heatmap, scatterplots, and a scatterplot matrix. \n",
-    "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g. mean or median by category) and visualized them through bar plots and a bar plot matrix.\n",
+    "- Explored bivariate relationships between numerical and categorical columns with group-wise statistics (e.g., mean or median by category) and visualized them through bar plots and a bar plot matrix.\n",
     "\n",
     "**Modeling**:\n",
-    "- Trained baseline models (e.g., regression, random forest, XGBoost).\n",
+    "- Trained baseline models (e.g., regression, support vector machine, random forest, multi-layer perceptron, XGBoost).\n",
     "\n",
     "**Next Steps**:\n",
     "- Perform hyperparameter tuning (e.g., using GridSearchCV).\n",
