In machine_learning_template.ipynb, in Summary section, move model evaluation and saving model from next steps to modeling section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2290,11 +2290,11 @@
     "\n",
     "**Modeling**:\n",
     "- Trained baseline models (e.g., regression, support vector machine, random forest, multi-layer perceptron, XGBoost).\n",
+    "- Performed hyperparameter tuning (e.g., using GridSearchCV).\n",
+    "- Selected final model based on performance evaluation (e.g., using accuracy, precision, recall, F1 score, RMSE, MAPE, R-squared).\n",
+    "- Saved model weights (e.g., as a pickle file).\n",
     "\n",
     "**Next Steps**:\n",
-    "- Perform hyperparameter tuning (e.g., using GridSearchCV).\n",
-    "- Select final model based on performance evaluation (e.g., using accuracy, precision, recall, F1 score, R-squared, or RMSE).\n",
-    "- Save model weights (e.g., as a pickle file).\n",
     "- Save preprocessed data (e.g., as a `.csv` file).\n",
     "- Model deployment (e.g., as a web application with an interactive UI and an API)."
    ]
