--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2274,29 +2274,31 @@
    "metadata": {},
    "source": [
     "**Data Preprocessing**:\n",
-    "- Handled duplicates (e.g., by removing duplicates based on the ID column).\n",
-    "- Handled incorrect data types (e.g., converted string columns to numerical columns where applicable).\n",
+    "- Removed duplicates (e.g., based on ID column).\n",
+    "- Handled incorrect data types (e.g., converted string columns to numerical or datetime columns).\n",
     "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns).\n",
-    "- Handled missing values (e.g., through imputation or deletion).\n",
-    "- Split data into training, validation, and test sets (e.g., 70% train, 15% validation, 15% test).\n",
+    "- Handled missing values (e.g., through deletion, median imputation for numerical columns, mode imputation for categorical columns).\n",
+    "- Split data into training (e.g., 70%), validation (15%), and test (15%) sets.\n",
     "- Scaled numerical features (e.g., using StandardScaler).\n",
     "- Encoded categorical features (e.g., using One-Hot Encoding).\n",
     "\n",
     "**Exploratory Data Analysis (EDA)**:\n",
-    "- Analyzed descriptive statistics (mean, median, standard deviation, etc.) of numerical columns and visualized distributions using histograms.\n",
-    "- Examined category frequencies of categorical columns and visualized them using bar plots and a bar plot matrix.\n",
-    "- Assessed bivariate relationships between numerical columns using a correlation heatmap, scatterplots, and a scatterplot matrix. \n",
-    "- Explored bivariate relationships between numerical and categorical columns with group-wise statistics (e.g., mean or median by category) and visualized them through bar plots and a bar plot matrix.\n",
+    "- Analyzed descriptive statistics (e.g., mean, median, standard deviation) of numerical columns and visualized distributions (e.g., using histograms).\n",
+    "- Examined frequencies of categorical columns and visualized them (e.g., using bar plots, a bar plot matrix).\n",
+    "- Assessed bivariate relationships between numerical columns (e.g., using a correlation heatmap, scatterplots, a scatterplot matrix). \n",
+    "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g., mean or median by category) and visualized them (e.g., through bar plots, a bar plot matrix).\n",
     "\n",
     "**Modeling**:\n",
-    "- Trained baseline models (e.g., regression, support vector machine, random forest, multi-layer perceptron, XGBoost).\n",
+    "- Trained baseline models.\n",
+    "    - For a regression task (e.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, XGBoost Regressor).\n",
+    "    - For a classification task (e.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, XGBoost Classifier).\n",
     "- Performed hyperparameter tuning (e.g., using GridSearchCV).\n",
-    "- Selected final model based on performance evaluation (e.g., using accuracy, precision, recall, F1 score, RMSE, MAPE, R-squared).\n",
-    "- Saved model weights (e.g., as a pickle file).\n",
+    "- Selected final model based on performance evaluation (e.g., using RMSE, MAPE or R-squared for a regression task or accuracy, precision, recall or F1 score for a classification task).\n",
+    "- Saved the final model (e.g., as a pickle file).\n",
     "\n",
     "**Next Steps**:\n",
     "- Save preprocessed data (e.g., as a `.csv` file).\n",
-    "- Model deployment (e.g., as a web application with an interactive UI and an API)."
+    "- Model deployment (e.g., as a web application with an interactive UI and an API using Gradio or Flask)."
    ]
   }
  ],
