In machine_learning_template.ipynb, in Summary section, update modeling section and separate regression vs classification task

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2289,16 +2289,18 @@
     "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g., mean or median by category) and visualized them (e.g., through bar plots, a bar plot matrix).\n",
     "\n",
     "**Modeling**:\n",
-    "- Trained baseline models.\n",
+    "- Trained baseline models to establish performance benchmarks:\n",
     "    - For a regression task (e.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, XGBoost Regressor).\n",
     "    - For a classification task (e.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, XGBoost Classifier).\n",
     "- Performed hyperparameter tuning (e.g., using GridSearchCV).\n",
-    "- Selected final model based on performance evaluation (e.g., using RMSE, MAPE or R-squared for a regression task or accuracy, precision, recall or F1 score for a classification task).\n",
+    "- Selected the final model based on performance evaluation:\n",
+    "    - For a regression task (e.g., using RMSE, MAPE, or R-squared)\n",
+    "    - For a classification task (e.g., using accuracy, precision, recall, or F1 score).\n",
     "- Saved the final model (e.g., as a pickle file).\n",
     "\n",
     "**Next Steps**:\n",
     "- Save preprocessed data (e.g., as a `.csv` file).\n",
-    "- Model deployment (e.g., as a web application with an interactive UI and an API using Gradio or Flask)."
+    "- Deploy the model as a web application with an interactive UI and API (e.g., using Gradio or Flask)."
    ]
   }
  ],
