In machine_learning_template.ipynb, in Summary section, add handled outliers in data preprocessing section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2278,6 +2278,7 @@
     "- Handled incorrect data types (e.g., converted string columns to numerical or datetime columns).\n",
     "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns).\n",
     "- Handled missing values (e.g., through deletion, median imputation for numerical columns, mode imputation for categorical columns).\n",
+    "- Handled outliers (e.g., removed them using the 3SD method or 1.5 IQR method).\n",
     "- Split data into training (e.g., 70%), validation (15%), and test (15%) sets.\n",
     "- Scaled numerical features (e.g., using StandardScaler).\n",
     "- Encoded categorical features (e.g., using One-Hot Encoding).\n",
