--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -48,8 +48,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score, classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
