In machine_learning_template.ipynb, in Modeling (Classification Task) > Training Baseline Models, create subsection for Logistic Regression

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2262,6 +2262,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3da39af8-e1d1-4b70-b9e6-ba118f7aa2c6",
+   "metadata": {},
+   "source": [
+    "## Training Baseline Models (Individually) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "328333fe-aed7-45c2-b7f0-653eb0ddbc2e",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaeab2b1-5c84-43bb-8031-e3dc49c78cba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "lr = LogisticRegression()\n",
+    "\n",
+    "# Train model\n",
+    "lr.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = lr.predict(X_train_transformed)\n",
+    "y_val_pred = lr.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model: Classification report\n",
+    "print(\"Training Classification Report:\")\n",
+    "print(classification_report(y_train, y_train_pred))\n",
+    "print(\"Validation Classification Report:\")\n",
+    "print(classification_report(y_val, y_val_pred))\n",
+    "\n",
+    "# Evaluate model: Confusion matrix \n",
+    "print(\"Training Confusion Matrix:\")\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=lr.classes_)\n",
+    "cm_disp_train.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Training Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Validation Confusion Matrix:\")\n",
+    "cm_val = confusion_matrix(y_val, y_val_pred)\n",
+    "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=lr.classes_)\n",
+    "cm_disp_val.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Validation Confusion Matrix\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02fd119a-14c4-46af-9e3e-facc98438ad0",
    "metadata": {},
    "source": [
