In machine_learning_template.ipynb, in Modeling (Classification Task) > Training Baseline Models > Logistic Regression, add hyperparameter explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2273,7 +2273,17 @@
    "id": "328333fe-aed7-45c2-b7f0-653eb0ddbc2e",
    "metadata": {},
    "source": [
-    "### Logistic Regression  "
+    "### Logistic Regression  \n",
+    "Hyperparameters and default values:\n",
+    "- `penalty=\"l2\"`: Regularization type (`\"l1\"`, `\"l2\"`, `\"elasticnet\"`, or `\"none\"`).\n",
+    "- `C=1.0`: Inverse of regularization strength (smaller = stronger regularization).\n",
+    "- `solver=\"lbfgs\"`: Optimization algorithm (`\"lbfgs\"`, `\"liblinear\"`, `\"saga\"`, etc.).\n",
+    "- `max_iter=100`: Maximum iterations for convergence.\n",
+    "- `multi_class=\"auto\"`: Multi-class handling (`\"ovr\"` or `\"multinomial\"`).\n",
+    "- `fit_intercept=True`: Whether to calculate the intercept.\n",
+    "- `class_weight=None`: Class weights; `\"balanced\"` adjusts for imbalance.\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn LogisticRegression documentation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)."
    ]
   },
   {
