In machine_learning_template.ipynb, in Modeling (Classification Task) > Training Baseline Models, create subsection for Support Vector Classifier with hyperparameter explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2315,7 +2315,7 @@
     "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=lr.classes_)\n",
     "cm_disp_train.plot(cmap=\"Blues\")\n",
     "plt.title(\"Training Confusion Matrix\")\n",
-    "plt.show()\n",
+    "plt.show()b\n",
     "\n",
     "print(\"Validation Confusion Matrix:\")\n",
     "cm_val = confusion_matrix(y_val, y_val_pred)\n",
@@ -2323,6 +2323,26 @@
     "cm_disp_val.plot(cmap=\"Blues\")\n",
     "plt.title(\"Validation Confusion Matrix\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "642e6c57-8d32-44ae-9f04-7592a27bb197",
+   "metadata": {},
+   "source": [
+    "### Support Vector Classifier    \n",
+    "Hyperparameters:\n",
+    "- `C=1.0`: Regularization strength (smaller = stronger regularization).\n",
+    "- `kernel=\"rbf\"`: Kernel type (`\"linear\"`, `\"poly\"`, `\"rbf\"`, `\"sigmoid\"`, or callable).\n",
+    "- `degree=3`: Degree of the polynomial kernel (ignored for other kernels).\n",
+    "- `gamma=\"scale\"`: Kernel coefficient (`\"scale\"`, `\"auto\"`, or float).\n",
+    "- `coef0=0.0`: Independent term in kernel functions (`\"poly\"` and `\"sigmoid\"` only).\n",
+    "- `class_weight=None`: Class weights; `\"balanced\"` adjusts for imbalance.\n",
+    "- `max_iter=-1`: Maximum iterations (unlimited if `-1`).\n",
+    "- `probability=False`: Enables probability estimates (slower training).\n",
+    "- `random_state=None`: Seed for reproducibility (affects `shrinking` and `probability`).\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn SVC documentation](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html)."
    ]
   },
   {
