In machine_learning_template.ipynb, in Modeling (Classification Task) > Training Baseline Models > Support Vector Classifier, add code for model training and evaluation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2330,7 +2330,7 @@
    "id": "642e6c57-8d32-44ae-9f04-7592a27bb197",
    "metadata": {},
    "source": [
-    "### Support Vector Classifier    \n",
+    "### Support Vector Classifier  \n",
     "Hyperparameters:\n",
     "- `C=1.0`: Regularization strength (smaller = stronger regularization).\n",
     "- `kernel=\"rbf\"`: Kernel type (`\"linear\"`, `\"poly\"`, `\"rbf\"`, `\"sigmoid\"`, or callable).\n",
@@ -2343,6 +2343,45 @@
     "- `random_state=None`: Seed for reproducibility (affects `shrinking` and `probability`).\n",
     "\n",
     "For more details, refer to the official [scikit-learn SVC documentation](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3176f017-440e-475e-ae4e-f3240d790887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "svc = SVC()  \n",
+    "\n",
+    "# Train model\n",
+    "svc.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = svc.predict(X_train_transformed)\n",
+    "y_val_pred = svc.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model: Classification report\n",
+    "print(\"Training Classification Report:\")\n",
+    "print(classification_report(y_train, y_train_pred))\n",
+    "print(\"Validation Classification Report:\")\n",
+    "print(classification_report(y_val, y_val_pred))\n",
+    "\n",
+    "# Evaluate model: Confusion matrix\n",
+    "print(\"Training Confusion Matrix:\")\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=svc.classes_)\n",
+    "cm_disp_train.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Training Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Validation Confusion Matrix:\")\n",
+    "cm_val = confusion_matrix(y_val, y_val_pred)\n",
+    "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=svc.classes_)\n",
+    "cm_disp_val.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Validation Confusion Matrix\")\n",
+    "plt.show()"
    ]
   },
   {
