--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -51,7 +51,7 @@
     "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score, classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.svm import SVR, SVC\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "from xgboost import XGBRegressor\n",
     "import xgboost as xgb\n",
@@ -2382,6 +2382,36 @@
     "cm_disp_val.plot(cmap=\"Blues\")\n",
     "plt.title(\"Validation Confusion Matrix\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e20c6880-b130-4b52-991d-f434d00f3d5e",
+   "metadata": {},
+   "source": [
+    "### Random Forest Classifier  \n",
+    "Hyperparameters and default values:\n",
+    "\n",
+    "- Model Complexity:\n",
+    "  - `n_estimators=100`: Number of trees in the forest.\n",
+    "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.\n",
+    "  - `min_samples_split=2`: Minimum number of samples required to split a node.\n",
+    "  - `min_samples_leaf=1`: Minimum number of samples required at a leaf node.\n",
+    "  - `max_features=\"auto\"`: Number of features considered for the best split; default `auto` uses the square root of all features.\n",
+    "- Regularization:\n",
+    "  - `max_leaf_nodes=None`: Maximum number of leaf nodes per tree.\n",
+    "  - `min_impurity_decrease=0.0`: Splits a node only if it decreases impurity by this threshold.\n",
+    "  - `class_weight=None`: Weights associated with classes. If `None`, all classes are supposed to have weight one. Use `\"balanced\"` to automatically adjust weights inversely proportional to class frequencies in the input data.\n",
+    "- Training Behavior:\n",
+    "  - `bootstrap=True`: Whether to use bootstrap samples for training each tree.\n",
+    "  - `oob_score=False`: Whether to use out-of-bag samples to estimate prediction accuracy.\n",
+    "  - `n_jobs=None`: Number of CPU threads used (`-1` for all processors).\n",
+    "  - `random_state=None`: Random seed for reproducibility.\n",
+    "  - `verbose=0`: Controls the verbosity of output during training.\n",
+    "- Performance Optimization:\n",
+    "  - `max_samples=None`: Maximum number of samples used to train each tree, useful for subsampling large datasets.\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn RandomForestClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier).\n"
    ]
   },
   {
