In machine_learning_template.ipynb, in Modeling (Classification Task) and Modeling (Regression Task), capitalize Default Values in markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1445,7 +1445,7 @@
    "metadata": {},
    "source": [
     "### Linear Regression  \n",
-    "Hyperparameters and default values:\n",
+    "Hyperparameters and Default Values:\n",
     "- `fit_intercept=True`: Calculates the intercept; can be set to `False` if data is already centered.\n",
     "- `n_jobs=None`: Number of CPU threads; use `-1` for all available processors.\n",
     "- `positive=False`: Forces regression coefficients to be non-negative if set to `True`.\n",
@@ -1495,8 +1495,7 @@
    "metadata": {},
    "source": [
     "### Support Vector Regressor  \n",
-    "Hyperparameters and default values:\n",
-    "\n",
+    "Hyperparameters and Default Values:\n",
     "- Model Complexity:\n",
     "    - `C=1.0`: Regularization parameter balancing error reduction and model complexity.\n",
     "    - `epsilon=0.1`: Margin of tolerance for predictions without penalty.\n",
@@ -1557,7 +1556,7 @@
    "metadata": {},
    "source": [
     "### Random Forest Regressor  \n",
-    "Hyperparameters and default values:\n",
+    "Hyperparameters and Default Values:\n",
     "- Model Complexity:\n",
     "  - `n_estimators=100`: Number of trees in the forest.  \n",
     "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.  \n",
@@ -1621,7 +1620,7 @@
    "metadata": {},
    "source": [
     "### Multi-Layer Perceptron Regressor  \n",
-    "Hyperparameters and default values:  \n",
+    "Hyperparameters and Default Values:\n",
     "- Model Architecture:\n",
     "    - `hidden_layer_sizes=(100,)`: Defines the size and number of hidden layers; `(100,)` indicates one layer with 100 neurons.  \n",
     "    - `activation=\"relu\"`: Activation function for the hidden layers; options include `\"relu\"`, `\"tanh\"`, `\"logistic\"`, or `\"identity\"`.  \n",
@@ -1691,7 +1690,7 @@
    "metadata": {},
    "source": [
     "### XGBoost Regressor  \n",
-    "Hyperparameters and default values:  \n",
+    "Hyperparameters and Default Values:\n",
     "- Model Complexity:  \n",
     "    - `n_estimators=100`: Number of trees.  \n",
     "    - `max_depth=6`: Maximum depth of each tree.  \n",
@@ -1855,7 +1854,7 @@
    "metadata": {},
    "source": [
     "### Random Forest Regressor  \n",
-    "Hyperparameters and default values:\n",
+    "Hyperparameters and Default Values:\n",
     "- Model Complexity:\n",
     "  - `n_estimators=100`: Number of trees in the forest.  \n",
     "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.  \n",
@@ -1948,7 +1947,7 @@
    "metadata": {},
    "source": [
     "### XGBoost Regressor  \n",
-    "Hyperparameters and default values:  \n",
+    "Hyperparameters and Default Values:\n",
     "- Model Complexity:  \n",
     "    - `n_estimators=100`: Number of trees.  \n",
     "    - `max_depth=6`: Maximum depth of each tree.  \n",
@@ -2274,7 +2273,7 @@
    "metadata": {},
    "source": [
     "### Logistic Regression  \n",
-    "Hyperparameters and default values:\n",
+    "Hyperparameters and Default Values:\n",
     "- `penalty=\"l2\"`: Regularization type (`\"l1\"`, `\"l2\"`, `\"elasticnet\"`, or `\"none\"`).\n",
     "- `C=1.0`: Inverse of regularization strength (smaller = stronger regularization).\n",
     "- `solver=\"lbfgs\"`: Optimization algorithm (`\"lbfgs\"`, `\"liblinear\"`, `\"saga\"`, etc.).\n",
@@ -2331,7 +2330,7 @@
    "metadata": {},
    "source": [
     "### Support Vector Classifier  \n",
-    "Hyperparameters:\n",
+    "Hyperparameters and Default Values:\n",
     "- `C=1.0`: Regularization strength (smaller = stronger regularization).\n",
     "- `kernel=\"rbf\"`: Kernel type (`\"linear\"`, `\"poly\"`, `\"rbf\"`, `\"sigmoid\"`, or callable).\n",
     "- `degree=3`: Degree of the polynomial kernel (ignored for other kernels).\n",
@@ -2390,8 +2389,7 @@
    "metadata": {},
    "source": [
     "### Random Forest Classifier  \n",
-    "Hyperparameters and default values:\n",
-    "\n",
+    "Hyperparameters and Default Values:\n",
     "- Model Complexity:\n",
     "  - `n_estimators=100`: Number of trees in the forest.\n",
     "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.\n",
