--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -52,7 +52,7 @@
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.svm import SVR, SVC\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
-    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from xgboost import XGBRegressor\n",
     "import xgboost as xgb\n",
     "import pickle\n",
