In machine_learning_template.ipynb, in Modeling (Classification Task) > Training Baseline Models, add subsection for Multi-Layer Perceptron Classifier with hyperparameter explanations

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2453,6 +2453,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c45832c-76dc-4826-a7a7-100534f785e2",
+   "metadata": {},
+   "source": [
+    "### Multi-Layer Perceptron Classifier  \n",
+    "Hyperparameters and Default Values:\n",
+    "- Model Architecture\n",
+    "    - `hidden_layer_sizes=(100,)`: Number and size of hidden layers; e.g., `(100,)` = 1 layer with 100 neurons.\n",
+    "    - `activation=\"relu\"`: Activation function; options: `\"relu\"`, `\"tanh\"`, `\"logistic\"`, `\"identity\"`.\n",
+    "- Optimization\n",
+    "    - `solver=\"adam\"`: Optimization algorithm; options: `\"adam\"`, `\"lbfgs\"`, `\"sgd\"`.\n",
+    "    - `alpha=0.0001`: L2 regularization to reduce overfitting.\n",
+    "    - `learning_rate=\"constant\"`: Learning rate strategy; options: `\"constant\"`, `\"invscaling\"`, `\"adaptive\"`.\n",
+    "    - `learning_rate_init=0.001`: Initial learning rate.\n",
+    "    - `power_t=0.5`: Used for `\"invscaling\"` learning rate.\n",
+    "- Training Behavior\n",
+    "    - `max_iter=200`: Maximum training iterations.\n",
+    "    - `tol=1e-4`: Stopping criterion for improvement tolerance.\n",
+    "    - `momentum=0.9`: Momentum for SGD (used with `solver=\"sgd\"`).\n",
+    "    - `early_stopping=False`: Stop early if no improvement on validation set.\n",
+    "    - `n_iter_no_change=10`: Iterations without improvement to stop training.\n",
+    "- Performance\n",
+    "    - `batch_size=\"auto\"`: Batch size; `\"auto\"` = `min(200, n_samples)`.\n",
+    "    - `shuffle=True`: Shuffle training data every epoch.\n",
+    "    - `random_state=None`: Seed for reproducibility.\n",
+    "    - `verbose=False`: Control output verbosity.\n",
+    "    - `warm_start=False`: Retain model state for further training.\n",
+    "- Classification-Specific\n",
+    "    - `validation_fraction=0.1`: Fraction of data for validation (used with `early_stopping=True`).\n",
+    "    - `out_activation_=\"softmax\"`: Output activation for multi-class classification.\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn MLPClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPClassifier.html).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02fd119a-14c4-46af-9e3e-facc98438ad0",
    "metadata": {},
    "source": [
