--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2487,6 +2487,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16330aa7-b3ef-4a0e-884b-0824ecf9c33f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "mlp = MLPClassifier(random_state=42)\n",
+    "\n",
+    "# Train model\n",
+    "mlp.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = mlp.predict(X_train_transformed)\n",
+    "y_val_pred = mlp.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model: Classification report\n",
+    "print(\"Training Classification Report:\")\n",
+    "print(classification_report(y_train, y_train_pred))\n",
+    "print(\"Validation Classification Report:\")\n",
+    "print(classification_report(y_val, y_val_pred))\n",
+    "\n",
+    "# Evaluate model: Confusion matrix\n",
+    "print(\"Training Confusion Matrix:\")\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=mlp.classes_)\n",
+    "cm_disp_train.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Training Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Validation Confusion Matrix:\")\n",
+    "cm_val = confusion_matrix(y_val, y_val_pred)\n",
+    "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=mlp.classes_)\n",
+    "cm_disp_val.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Validation Confusion Matrix\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "02fd119a-14c4-46af-9e3e-facc98438ad0",
    "metadata": {},
