In machine_learning_template.ipynb, in Setup > Imports, import XGBClassifier

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -53,7 +53,7 @@
     "from sklearn.svm import SVR, SVC\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
-    "from xgboost import XGBRegressor\n",
+    "from xgboost import XGBRegressor, XGBClassifier\n",
     "import xgboost as xgb\n",
     "import pickle\n",
     "import os"
