--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2563,6 +2563,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bd78bba-62bf-447f-9dc7-6dda7e0dcdb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "xgb = XGBClassifier(random_state=42)\n",
+    "\n",
+    "# Train model\n",
+    "xgb.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = xgb.predict(X_train_transformed)\n",
+    "y_val_pred = xgb.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model: Classification report\n",
+    "print(\"Training Classification Report:\")\n",
+    "print(classification_report(y_train, y_train_pred))\n",
+    "print(\"Validation Classification Report:\")\n",
+    "print(classification_report(y_val, y_val_pred))\n",
+    "\n",
+    "# Evaluate model: Confusion matrix \n",
+    "print(\"Training Confusion Matrix:\")\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=xgb.classes_)\n",
+    "cm_disp_train.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Training Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Validation Confusion Matrix:\")\n",
+    "cm_val = confusion_matrix(y_val, y_val_pred)\n",
+    "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=xgb.classes_)\n",
+    "cm_disp_val.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Validation Confusion Matrix\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
