In machine_learning_template.ipynb, in Modeling (Classification Task) section, add subsection for Training Baseline Models (Pipeline)

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2603,6 +2603,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6983589-27f9-43d1-a8f3-ea43240fd89f",
+   "metadata": {},
+   "source": [
+    "## Training Baseline Models (Pipeline)  \n",
+    "Train five baseline models:\n",
+    "- Logistic Regression\n",
+    "- Support Vector Classifier\n",
+    "- Random Forest Classifier\n",
+    "- Multi-Layer Perceptron Classifier\n",
+    "- XGBoost Classifier\n",
+    "\n",
+    "The model performance will be evaluated using the following metrics:  \n",
+    "- Accuracy\n",
+    "- Precision\n",
+    "- Recall\n",
+    "- F1 score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
