In machine_learning_template.ipynb, in Modeling (Classification Task) > Training Baseline Models (Pipeline) section, add pipeline to transform data and fit baseline models

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2622,6 +2622,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8e58d6b-18f1-4344-a275-4ce620191bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define models with baseline configurations\n",
+    "models = [LogisticRegression(), SVC(), RandomForestClassifier(random_state=42), MLPClassifier(random_state=42), XGBClassifier(random_state=42)]\n",
+    "\n",
+    "# Loop through each model\n",
+    "for model in models:\n",
+    "    # Show model\n",
+    "    print(\"=\" * 100)\n",
+    "    print(f\"Model: {model}\")\n",
+    "\n",
+    "    # Scale numerical columns and encode categorical columns \n",
+    "    column_transformer = ColumnTransformer(\n",
+    "        transformers=[\n",
+    "            (\"scaler\", StandardScaler(), numerical_columns),\n",
+    "            (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)\n",
+    "        ],\n",
+    "        remainder=\"passthrough\"  # Include the boolean columns without transformation\n",
+    "    )\n",
+    "\n",
+    "    # Create a pipeline\n",
+    "    pipeline = Pipeline(steps=[\n",
+    "        (\"column_transformer\", column_transformer),\n",
+    "        (\"model\", model)\n",
+    "    ])\n",
+    "\n",
+    "    # Fit the pipeline on the training data\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Predict on the validation data\n",
+    "    y_val_pred = pipeline.predict(X_val)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
