--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2656,7 +2656,19 @@
     "    pipeline.fit(X_train, y_train)\n",
     "    \n",
     "    # Predict on the validation data\n",
-    "    y_val_pred = pipeline.predict(X_val)"
+    "    y_val_pred = pipeline.predict(X_val)\n",
+    "\n",
+    "    # Evaluate model: Classification report\n",
+    "    print(\"Classification Report:\")\n",
+    "    print(classification_report(y_val, y_val_pred))\n",
+    "    \n",
+    "    # Evaluate model: Confusion matrix\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    cm_val = confusion_matrix(y_val, y_val_pred)\n",
+    "    cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val)\n",
+    "    cm_disp_val.plot(cmap=\"Blues\")\n",
+    "    plt.title(\"Confusion Matrix\")\n",
+    "    plt.show()"
    ]
   },
   {
