--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2673,6 +2673,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ccfe859-3f44-4ecb-b975-56e392b352ec",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter Tuning  \n",
+    "Based on baseline model training, the following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1 score on the validation data and were selected for hyperparameter tuning:\n",
+    "- Model 1 (e.g., Random Forest Classifier)\n",
+    "- Model 2 (e.g., XGBoost Classifier)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
