In machine_learning_template.ipynb, in Modeling (Classification Task) > Hyperparameter Tuning section, add markdown comment for justification of selected models

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2678,8 +2678,10 @@
    "source": [
     "## Hyperparameter Tuning  \n",
     "Based on baseline model training, the following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1 score on the validation data and were selected for hyperparameter tuning:\n",
-    "- Model 1 (e.g., Random Forest Classifier)\n",
-    "- Model 2 (e.g., XGBoost Classifier)"
+    "- Model 1 (e.g., Random Forest Classifier)  \n",
+    "  *(Brief justification, e.g., high recall and F1 score on validation data)* \n",
+    "- Model 2 (e.g., XGBoost Classifier)  \n",
+    "  *(Brief justification, e.g., consistently high accuracy across classes)*"
    ]
   },
   {
