--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -47,7 +47,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score, classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.svm import SVR, SVC\n",
