--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1342,7 +1342,7 @@
    "source": [
     "# Feature Scaling and Encoding  \n",
     "Preprocess the data with a ColumnTransformer: \n",
-    "- Scale numerical columns with StandardScaler (mean=0, std=1)\n",
+    "- Scale numerical columns with StandardScaler (mean=0, std=1) or MinMaxScaler (min=0, max=1)\n",
     "- Encode categorical columns with OneHotEncoder\n",
     "- Pass through boolean columns unchanged "
    ]
@@ -1357,8 +1357,10 @@
     "# Initialize a column transformer \n",
     "column_transformer = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        (\"scaler\", StandardScaler(), numerical_columns),  # scale numerical columns \n",
-    "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  # encode categorical columns\n",
+    "        # Scale numerical columns \n",
+    "        (\"scaler\", StandardScaler(), numerical_columns),  # Use MinMaxScaler() for min-max normalization\n",
+    "        # Encode categorical columns\n",
+    "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  \n",
     "    ],\n",
     "    remainder=\"passthrough\"  # retain boolean columns as-is\n",
     ")\n",
