--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1341,10 +1341,10 @@
    "metadata": {},
    "source": [
     "# Feature Scaling and Encoding  \n",
-    "Preprocess the data with a ColumnTransformer: \n",
-    "- Scale numerical columns with StandardScaler (mean=0, std=1) or MinMaxScaler (min=0, max=1)\n",
-    "- Encode categorical columns with OneHotEncoder\n",
-    "- Pass through boolean columns unchanged "
+    "Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single pipeline:  \n",
+    "- Scale numerical columns: Use `StandardScaler` (scales features to have mean = 0 and standard deviation = 1) or optionally `MinMaxScaler` (scales features to a range between [0, 1]).\n",
+    "- Encode categorical columns: Apply `OneHotEncoder` to convert categorical variables into binary (one-hot) encoded vectors.\n",
+    "- Pass through boolean columns unchanged: Retain boolean features in their original form using `remainder=\"passthrough\"`."
    ]
   },
   {
@@ -1357,12 +1357,10 @@
     "# Initialize a column transformer \n",
     "column_transformer = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        # Scale numerical columns \n",
     "        (\"scaler\", StandardScaler(), numerical_columns),  # Use MinMaxScaler() for min-max normalization\n",
-    "        # Encode categorical columns\n",
     "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  \n",
     "    ],\n",
-    "    remainder=\"passthrough\"  # retain boolean columns as-is\n",
+    "    remainder=\"passthrough\" \n",
     ")\n",
     "\n",
     "# Fit the column transformer to the training data and apply transformations\n",
