In machine_learning_template.ipynb, in Modeling (Regression Task) > Hyperparameter Tuning section, add example justification for selected models as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1844,8 +1844,10 @@
    "source": [
     "## Hyperparameter Tuning  \n",
     "Based on baseline model training, the following models outperformed the other candidates across evaluation metrics (RMSE, MAPE, R-squared) on the validation data and were selected for hyperparameter tuning:\n",
-    "- Model 1 (e.g., Random Forest Regressor)\n",
-    "- Model 2 (e.g., XGBoost Regressor)"
+    "- Model 1 (e.g., Random Forest Regressor)  \n",
+    "  *Justification*: Delivered low RMSE and MAPE scores during baseline evaluation, showing strong predictive performance with minimal error.\n",
+    "- Model 2 (e.g., XGBoost Regressor)  \n",
+    "  *Justification*: Achieved high R-squared and consistently low error metrics, indicating its ability to capture underlying patterns in the data effectively."
    ]
   },
   {
