In machine_learning_template.ipynb, in Modeling (Regression Task) > Hyperparameter Tuning section, update example justification for selected models as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1845,9 +1845,9 @@
     "## Hyperparameter Tuning  \n",
     "Based on baseline model training, the following models outperformed the other candidates across evaluation metrics (RMSE, MAPE, R-squared) on the validation data and were selected for hyperparameter tuning:\n",
     "- Model 1 (e.g., Random Forest Regressor)  \n",
-    "  *Justification*: Delivered low RMSE and MAPE scores during baseline evaluation, showing strong predictive performance with minimal error.\n",
+    "  *Justification example*: Delivered low RMSE and MAPE scores during baseline evaluation, showing strong predictive performance with minimal error.\n",
     "- Model 2 (e.g., XGBoost Regressor)  \n",
-    "  *Justification*: Achieved high R-squared and consistently low error metrics, indicating its ability to capture underlying patterns in the data effectively."
+    "  *Justification example*: Achieved high R-squared and consistently low error metrics, indicating its ability to capture underlying patterns in the data effectively."
    ]
   },
   {
@@ -2681,9 +2681,9 @@
     "## Hyperparameter Tuning  \n",
     "Based on baseline model training, the following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1 score on the validation data and were selected for hyperparameter tuning:\n",
     "- Model 1 (e.g., Random Forest Classifier)  \n",
-    "  *(Brief justification, e.g., high recall and F1 score on validation data)* \n",
+    "  *Justification example*: Demonstrated high recall and F1 score, indicating robust performance across multiple classes and strong handling of imbalanced datasets. \n",
     "- Model 2 (e.g., XGBoost Classifier)  \n",
-    "  *(Brief justification, e.g., consistently high accuracy across classes)*"
+    "  *Justification example*: Consistently high accuracy across classes and strong overall evaluation metric scores, making it a competitive option for fine-tuning."
    ]
   },
   {
