In machine_learning_template.ipynb, in Modeling (Classification Task) > Hyperparameter Tuning section, add subsection for Random Forest Classifier with markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2688,6 +2688,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ce66a1c-d2e8-4819-a35a-9b23545a0700",
+   "metadata": {},
+   "source": [
+    "### Random Forest Classifier  \n",
+    "Hyperparameters and Default Values:\n",
+    "- Model Complexity:\n",
+    "  - `n_estimators=100`: Number of trees in the forest.\n",
+    "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.\n",
+    "  - `min_samples_split=2`: Minimum number of samples required to split a node.\n",
+    "  - `min_samples_leaf=1`: Minimum number of samples required at a leaf node.\n",
+    "  - `max_features=\"auto\"`: Number of features considered for the best split; default `auto` uses the square root of all features.\n",
+    "- Regularization:\n",
+    "  - `max_leaf_nodes=None`: Maximum number of leaf nodes per tree.\n",
+    "  - `min_impurity_decrease=0.0`: Splits a node only if it decreases impurity by this threshold.\n",
+    "  - `class_weight=None`: Weights associated with classes. If `None`, all classes are supposed to have weight one. Use `\"balanced\"` to automatically adjust weights inversely proportional to class frequencies in the input data.\n",
+    "- Training Behavior:\n",
+    "  - `bootstrap=True`: Whether to use bootstrap samples for training each tree.\n",
+    "  - `oob_score=False`: Whether to use out-of-bag samples to estimate prediction accuracy.\n",
+    "  - `n_jobs=None`: Number of CPU threads used (`-1` for all processors).\n",
+    "  - `random_state=None`: Random seed for reproducibility.\n",
+    "  - `verbose=0`: Controls the verbosity of output during training.\n",
+    "- Performance Optimization:\n",
+    "  - `max_samples=None`: Maximum number of samples used to train each tree, useful for subsampling large datasets.\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn RandomForestClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier).\n",
+    "\n",
+    "The following hyperparameters are typically the most impactful:\n",
+    "- `n_estimators`\n",
+    "- `max_depth`  \n",
+    "- `min_samples_split`\n",
+    "- `min_samples_leaf`\n",
+    "- `max_features`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
